# adnix-rs

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  LICENSE-MIT  README.md  adnix-installer.ps1.txt  adnix-installer.sh.txt  artifacts.json  deny.toml  flake.nix  index.html  oranda.json  shell.nix
.github/workflows/: build.yml  release.yml  test.yml  web.yml
artifacts/: index.html
docs/: adnix-installer.ps1.txt  adnix-installer.sh.txt  index.html
docs/artifacts/: index.html
src/: adnix.yml  cli_opts.rs  formatter.rs  main.rs  source.rs
src/formatters/: mod.rs
test_data/: hosts  sample_config
wix/: main.wxs
