[package]
name = "adnix"
version = "0.4.9"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2021"
description = "Rust binary to generate DNSMasq and Unbound configurations from UNIX host files"
license = "MIT/Apache-2.0"
homepage = "https://github.com/msfjarvis/adnix-rs"
repository = "https://github.com/msfjarvis/adnix-rs"
readme = "README.md"
include = ["src/**/*", "/README.md"]

[package.metadata.wix]
upgrade-guid = "53119216-7786-4FE4-B2A2-23FABE108795"
path-guid = "44B8D28F-3CF0-4AF6-A080-504A5E506882"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["color", "deprecated", "derive"] }
color-eyre = { version = "0.6.3", default-features = false }
regex = "1.10.3"
ureq = "2.9.6"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# A GitHub repo to push Homebrew formulas to
tap = "msfjarvis/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
